Added styling, plus theme selector.  Refined navigation when view address entered directly in URL, plus modified underlying controller/model to handle it.

--- a/Esra.Web/Esra.Web.csproj
+++ b/Esra.Web/Esra.Web.csproj
@@ -183,19 +183,36 @@
     <Content Include="Css\common.css" />
     <Content Include="Css\extended.css" />
     <Content Include="Css\images\ui-bg_flat_0_aaaaaa_40x100.png" />
+    <Content Include="Css\images\ui-bg_flat_55_999999_40x100.png" />
+    <Content Include="Css\images\ui-bg_flat_75_aaaaaa_40x100.png" />
     <Content Include="Css\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Css\images\ui-bg_glass_0_014a81_1x400.png" />
     <Content Include="Css\images\ui-bg_glass_0_3182c0_1x400.png" />
     <Content Include="Css\images\ui-bg_glass_0_fbf7eb_1x400.png" />
     <Content Include="Css\images\ui-bg_glass_0_ffffff_1x400.png" />
+    <Content Include="Css\images\ui-bg_glass_45_0078ae_1x400.png" />
+    <Content Include="Css\images\ui-bg_glass_55_f8da4e_1x400.png" />
+    <Content Include="Css\images\ui-bg_glass_75_79c9ec_1x400.png" />
+    <Content Include="Css\images\ui-bg_gloss-wave_45_e14f1c_500x100.png" />
+    <Content Include="Css\images\ui-bg_gloss-wave_50_6eac2c_500x100.png" />
+    <Content Include="Css\images\ui-bg_gloss-wave_75_2191c0_500x100.png" />
     <Content Include="Css\images\ui-bg_highlight-soft_0_014a81_1x100.png" />
+    <Content Include="Css\images\ui-bg_inset-hard_100_fcfdfd_1x100.png" />
     <Content Include="Css\images\ui-bg_inset-soft_0_fcf0f0_1x100.png" />
+    <Content Include="Css\images\ui-icons_0078ae_256x240.png" />
     <Content Include="Css\images\ui-icons_014a81_256x240.png" />
+    <Content Include="Css\images\ui-icons_056b93_256x240.png" />
     <Content Include="Css\images\ui-icons_222222_256x240.png" />
     <Content Include="Css\images\ui-icons_c83900_256x240.png" />
+    <Content Include="Css\images\ui-icons_d8e7f3_256x240.png" />
+    <Content Include="Css\images\ui-icons_e0fdff_256x240.png" />
+    <Content Include="Css\images\ui-icons_f5e175_256x240.png" />
+    <Content Include="Css\images\ui-icons_f7a50d_256x240.png" />
+    <Content Include="Css\images\ui-icons_fcd113_256x240.png" />
     <Content Include="Css\images\ui-icons_ffffff_256x240.png" />
     <Content Include="Css\images\ui-icons_fffff_256x240.png" />
     <Content Include="Css\jquery-ui-1.8.11.custom.css" />
+    <Content Include="Css\jquery-ui-1.8.16.custom.css" />
     <Content Include="Css\main.css" />
     <EmbeddedResource Include="favicon.ico" />
     <Content Include="Css\ui.multiselect.css" />
@@ -211,10 +228,15 @@
     <Content Include="Images\printer.gif" />
     <Content Include="Images\top_blue_bar.jpg" />
     <Content Include="robots.txt" />
+    <Content Include="Scripts\Copy of jquery.ui.combobox.js" />
+    <Content Include="Scripts\jquery-1.6.2.min.js" />
+    <Content Include="Scripts\jquery-ui-1.8.16.custom.min.js" />
+    <Content Include="Scripts\jquery.tmpl.min.js" />
     <Content Include="Scripts\jquery.ui.combobox.js" />
     <Content Include="Scripts\Copy of ui.multiselect.js" />
     <Content Include="Scripts\jquery.defaultvalue-1.0.js" />
     <Content Include="Scripts\jquery.defaultValue.js" />
+    <Content Include="Scripts\themeswitchertool.js" />
     <Content Include="Scripts\ui.multiselect.js" />
     <Content Include="Scripts\dataTables.naturalSort.js" />
     <Content Include="Scripts\dataTables.deptEmployee.js" />
