--- a/Esra.Web/Web.config
+++ b/Esra.Web/Web.config
@@ -42,15 +42,15 @@
     <add name="Catbert" connectionString="Data Source=vogel;Initial Catalog=CATBERT3;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>-->
   <connectionStrings>
-    <add name="MainDB" connectionString="data source=terry;Initial Catalog=ESRA;Integrated Security=true;" providerName="System.Data.SqlClient" />
-    <add name="Catbert" connectionString="Data Source=terry;Initial Catalog=CATBERT3;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="MainDB" connectionString="data source=terry;Initial Catalog=ESRA;Integrated Security=true;" providerName="System.Data.SqlClient"/>
+    <add name="Catbert" connectionString="Data Source=terry;Initial Catalog=CATBERT3;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <elmah>
     <!--<errorLog type="Elmah.SqlErrorLog, Elmah" connectionStringName="RATBERT" applicationName="SampleUCDArchApp"/>-->
     <!--<errorMail from="fromEmail" to="toEmail" subject="ELMAH: SampleUCDArchApp web error response" smtpServer="YOUR_SMTP"/>-->
   </elmah>
   <system.web>
-    <compilation debug="false" targetFramework="4.0">
+    <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
         <add assembly="System.Web.Helpers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
