Converted project to use VS 2012, plus changed CAS to use standard port.  Also "fixed" nHibernate error if object was not found.

--- a/Esra.Web/Web.config
+++ b/Esra.Web/Web.config
@@ -61,7 +61,7 @@
     <!--<errorMail from="fromEmail" to="toEmail" subject="ELMAH: SampleUCDArchApp web error response" smtpServer="YOUR_SMTP"/>-->
   </elmah>
   <system.web>
-    <compilation debug="false" targetFramework="4.0">
+    <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
         <add assembly="System.Web.Helpers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
