--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ Esra.Web/obj/Debug/Esra.Web.pdb
 *.pdb
 Esra.Web/bin/Esra.Web.dll
 Esra.Web/obj/Debug/Esra.Web.dll
+.vs/ESRA/v15/Server/sqlite3/storage.ide-wal
+Esra.Core/bin/Release/Esra.Core.dll
+Esra.Core/bin/Release/Esra.Core.pdb
+Esra.Core/bin/Release/Microsoft.CSharp.dll
