--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ Esra.Web/obj/Debug/Esra.Web.dll
 Esra.Core/bin/Release/Esra.Core.dll
 Esra.Core/bin/Release/Esra.Core.pdb
 Esra.Core/bin/Release/Microsoft.CSharp.dll
+.vs/ESRA/v15/Server/sqlite3/storage.ide-wal
