--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ _ReSharper*/
 Esra.Web/connectionStrings.config
 Esra.Web/appSettings.config
 
+Esra.Web/bin/Esra.Core.dll
+Esra.Web/bin/Esra.Web.dll
