--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,13 @@ _ReSharper*/
 !Bin/
 .vs/
 Esra.Web/bin/Esra.Web.dll.config
-Esra.Web/connectionStrings.config
+connectionStrings.config
+Esra.Web/appSettings.config
 Esra.Web/appSettings.config
 Esra.Web/bin/Esra.Core.dll
 Esra.Web/bin/Esra.Web.dll
 
+/Esra.Web/connectionStrings.config
+/Esra.Db/Esra.Db.jfm
+/Esra.Web/bin/Esra.Core.dll
+/Esra.Web/bin/Esra.Web.dll
