--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ Esra.Web/connectionStrings.config
 /Esra.Web/connectionStrings.config
 /Esra.Web/bin/Esra.Core.dll
 /Esra.Web/bin/Esra.Web.dll
+/Esra.Db/Esra.Db.dbmdl
+/Esra.Db/Esra.Db.jfm
